v1.1.2 Fixed some minor Things like the facebook gap size

--- a/Realetor CSS.css
+++ b/Realetor CSS.css
@@ -259,6 +259,7 @@ body {
 }
 
 /*Facebook*/
+
 .facebook-container {
     display: flex;
     justify-content: space-between;
@@ -270,6 +271,7 @@ body {
 }
 
 .facebook-text {
+    margin-left: 5px;
     font-size: 30px;
 }
 
